# waraq

./: .env.example  .gitignore  README.md  chainlit_app.py  docker-compose.yml  exchange.txt  pyproject.toml  server.py  x.txt
.chainlit/: config.toml
app/: chainlit_app.py  explorer_router.py  server.py
data/: bbox_map.json  benchmark_qa.json  benchmark_results.json  index-test-output.json  index-test.json  index.json  section_chunks.json
data/parsed/: output.json  part_0.json  part_1.json  part_2.json
data/parsed/markdown/: document.md
docs/: frontend_overview.md  langfuse_setup.md  navigation_graph.mmd  stage3_setup_guide.md  waraq-landing-design-enhancement.md  waraq_overview_checkpoint_18_05_26.md  waraq_plan.md  waraq_progress.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.chainlit/: config.toml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: playground.tsx
frontend/src/pages/: ExplorerPage.tsx  (+1 more)
scripts/: assign_bboxes.py  build_markdown.py  build_section_chunks.py  generate_graph_diagram.py  normalize_hooks.py  rebuild_section_hooks.py  remerge_parts.py  run_benchmark.py  run_ingestion.py  run_summary_gen.py  start_vllm.sh  test_llm.py  test_rebuild_section_hooks.py  test_summary_gen.py  test_vllm.py
tests/: conftest.py  test_chainlit_app.py  test_nav_responder.py  test_navigation.py  test_responder.py
waraq/generation/: responder.py
waraq/llm/: client.py
waraq/navigation/: graph.py  nodes.py  prompts.py  state.py
waraq/observability/: tracer.py
(+223 files in other folders)
