[project]
name = "waraq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "landingai-ade>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.1.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["waraq"]
